set tabsize to 2 for json files

--- a/User/settings.json
+++ b/User/settings.json
@@ -107,4 +107,10 @@
 
   // C# & Omnisharp
   "omnisharp.path": "latest",
+
+  // Whitespace
+  "editor.tabSize": 4,
+  "[json]": {
+    "editor.tabSize": 2,
+  },
 }
