use lisp formatting for .fnl fennel files

--- a/User/settings.json
+++ b/User/settings.json
@@ -95,7 +95,8 @@
 
   // Use SCSS to reduce errors in linting CSS.
   "files.associations": {
-    "*.css": "scss"
+    "*.css": "scss",
+    "*.fnl": "lisp"
   },
 
   // FSharp
